k8s/temp_k8s/analytics-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o temptemp/
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: analytics-microservice
  name: analytics-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analytics-microservice
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o temptemp/
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: analytics-microservice
    spec:
      containers:
        - args:
            - python
            - main.py
          image: analytics-microservice:latest
          imagePullPolicy: IfNotPresent
          name: analytics-microservice
          ports:
            - containerPort: 8002
          resources: 
          # volumeMounts:
          #   - mountPath: /app/analytics-microservice/
          #     name: analytics-microservice-claim0
      restartPolicy: Always
      volumes:
        - name: analytics-microservice-claim0
          persistentVolumeClaim:
            claimName: analytics-microservice-claim0
status: {}
