k8s/temp_k8s/monitoring-management-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o temptemp/
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: monitoring-management-microservice
  name: monitoring-management-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: monitoring-management-microservice
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o temptemp/
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: monitoring-management-microservice
    spec:
      containers:
        - command:
            - python 
            - main.py
          image: monitoring-management-microservice:latest 
          imagePullPolicy: IfNotPresent
          name: monitoring-management-microservice
          ports:
            - containerPort: 8000
          resources: 
          # volumeMounts:
          #   - mountPath: /app/monitoring-management-microservice/
          #     name: monitoring-management-microservice-claim0
      restartPolicy: Always
      volumes:
        - name: monitoring-management-microservice-claim0
          persistentVolumeClaim:
            claimName: monitoring-management-microservice-claim0
status: {}
