k8s/temp_k8s/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o temp_k8s
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mosquitto
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o temp_k8s
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: mosquitto
    spec:
      containers:
        - image: eclipse-mosquitto
          name: mosquitto
          # command:
          #   - ls
          #   - -la
          #   - /mosquitto/config
          ports:
            - containerPort: 1883
            - containerPort: 9001
          resources: 
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      hostname: mosquitto
      restartPolicy: Always
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        # - name: mosquitto-data
        #   persistentVolumeClaim:
        #     claimName: mosquitto-claim0
        # - name: mosquitto-config
        #   persistentVolumeClaim:
        #     claimName: mosquitto-claim1
        # - name: mosquitto-log
        #   persistentVolumeClaim:
        #     claimName: mosquitto-claim2
status: {}
