k8s/temp_k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o temp_k8s
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o temp_k8s
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - image: bitnami/prometheus
          name: prometheus
          ports:
            - containerPort: 9090
          resources: 
          # volumeMounts:
          #   - mountPath: /etc/prometheus/prometheus.yml
          #     name: prometheus-claim0
          #   - mountPath: /etc/prometheus
          #     name: prometheus-claim1
      restartPolicy: Always
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-claim0
          persistentVolumeClaim:
            claimName: prometheus-claim0
        - name: prometheus-claim1
          persistentVolumeClaim:
            claimName: prometheus-claim1
status: {}
