k8s/temp_k8s/monitoring-management-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o temptemp/
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: monitoring-management-microservice
  name: monitoring-management-microservice
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: monitoring-management-microservice
status:
  loadBalancer: {}
